--- a/frontend/app/templates/restaurant.hbs
+++ b/frontend/app/templates/restaurant.hbs
@@ -151,7 +151,18 @@
               About
               {{model.restaurant.name}}
             </h2>
-            <h5 class="restaurant-card-subtitle">
+              <iframe
+                width="100%"
+                height="400"
+                frameborder="0"
+                scrolling="no"
+                marginheight="0"
+                marginwidth="0"
+
+                src="https://maps.google.com/maps?q={{model.restaurant.latitude}},{{model.restaurant.longitude}}&hl=es;z=14&amp;output=embed"
+               >
+               </iframe>
+              <h5 class="restaurant-card-subtitle">
               Description
             </h5>
             <p class="restaurant-card-bodytext">
